--- a/HawaiiPage/index.html
+++ b/HawaiiPage/index.html
@@ -31,10 +31,10 @@
 <body>
     <!-- banner -->
     <section class="header9 justify-content-md-center cid-rT5qd92Jpo mbr-fullscreen mbr-parallax-background"
-        id="header9-5">
+        >
 
         <div class="mask"></div>
-        <img class="row animated pulse infinite " src="/assets/images/aloha3.png" alt="aloha">
+        <img class="row animated pulse infinite" src="/assets/images/aloha3.png " alt="aloha" >
         <h1>Hawaii, USA</h1>
 
         <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
@@ -44,14 +44,13 @@
         </div>
     </section>
 
-    <section class="header1 mbr-parallax-background" id="header1-6">
+    <section class="header1 mbr-parallax-background">
         <div class="box2 justify-content-md-center" data-aos="zoom-in-right">
             <div class="row ">
                 <div class="mbr-white col-md-10 ">
                     <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Hawaii is the island of
                         big dreams for both islanders and guests. Those dreams born in paradise can, indeed come
                         true.&nbsp;</h3>
-
 
                 </div>
             </div>
@@ -176,7 +175,7 @@
                         <div class="time-line-date-content">
                             <p class="mbr-timeline-date mbr-fonts-style display-5">
                                 1,500 years ago <br>
-                                <img src="/assets/images/Arts and Culture in Hawaii.jpg" alt="" width="90%">
+                                <img src="/assets/images/Arts and Culture in Hawaii.jpg" alt="" width="90%" !important>
                             </p>
                         </div>
                     </div>
@@ -199,7 +198,7 @@
                         <div class="time-line-date-content">
                             <p class="mbr-timeline-date mbr-fonts-style display-5">
                                 1795-1874 <br>
-                                <img src="/assets/images/Kamehameha.jpg" alt="Kamehameha" style="width: 90%;">
+                                <img src="/assets/images/Kamehameha.jpg" alt="Kamehameha" style="width: 90%;" !important>
 
 
                             </p>
@@ -230,7 +229,7 @@
                         <div class="time-line-date-content">
                             <p class="mbr-timeline-date mbr-fonts-style display-5">
                                 August 21, 1959 <br>
-                                <img src="/assets/images/hawaiistateflag.jpg" alt="hawaiistateflag" style="width: 90%;">
+                                <img src="/assets/images/hawaiistateflag.jpg" alt="hawaiistateflag" style="width: 90%;" !important>
 
                             </p>
                         </div>
