--- a/HawaiiPage/index.html
+++ b/HawaiiPage/index.html
@@ -30,9 +30,8 @@
 
 <body>
     <!-- banner -->
-    <section class="header9 justify-content-md-center cid-rT5qd92Jpo mbr-fullscreen mbr-parallax-background"
+    <section class="header9 justify-content-md-center mbr-fullscreen"
         id="header9-5">
-
         <div class="mask"></div>
         <img class="row animated pulse infinite " src="/assets/images/aloha3.png" alt="aloha">
         <h1>Hawaii, USA</h1>
@@ -44,7 +43,7 @@
         </div>
     </section>
 
-    <section class="header1 mbr-parallax-background" id="header1-6">
+    <section class="header1" id="header1-6">
         <div class="box2 justify-content-md-center" data-aos="zoom-in-right">
             <div class="row ">
                 <div class="mbr-white col-md-10 ">
