--- a/HawaiiPage/index.html
+++ b/HawaiiPage/index.html
@@ -272,7 +272,33 @@
         </div>
     </section>
 
+    <section class="mbr-section article content11 cid-rT5xt0icAC" id="content11-e">
 
+
+        <div class="container">
+            <div class="media-container-row">
+             
+                <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7" data-aos="fade-up">
+                    <h2 class="align-center pb-3 mbr-fonts-style display-2" >
+                        Go to Hawaii
+                    </h2>
+                    <ol>
+                        <li><strong>Before You Travel</strong> - Find out what to pack, which important documents you
+                            need to bring and what to expect at airport security. <a
+                                href="https://www.gohawaii.com/trip-planning/planning-your-trip/before-traveling">MORE
+                                ></a></li>
+                        <li><strong>Weather</strong> - The Hawaiian Islands are known for their beautiful weather year
+                            around, but conditions can differ at various elevations, so we want you to be prepared when
+                            you arrive. <a href="https://www.gohawaii.com/trip-planning/weather">MORE ></a></li>
+                        <li><strong>Safety Tips</strong> - Make sure the whole family stays safe and secure on your trip
+                            to Hawaii with these useful tips and tricks, from ocean safety to procedures in the event of
+                            an emergency. <a href="https://www.gohawaii.com/trip-planning/travel-smart/safety-tips">MORE
+                                ></a></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="mbr-section content4 cid-rT5xqwmxGP" id="content4-d">
 
@@ -280,7 +306,7 @@
             <div class="media-container-row">
                 <div class="title col-12 col-md-12" >
                     <h2 class="align-center pb-3 mbr-fonts-style display-2" data-aos="fade-up">
-                        Go to Hawaii
+                        Explore Hawaii
                     </h2>
 
                     <div class="ig-box row justify-content-between" data-aos="zoom-in-up">
@@ -586,30 +612,7 @@
         </div>
     </section>
 
-    <section class="mbr-section article content11 cid-rT5xt0icAC" id="content11-e">
-
-
-        <div class="container">
-            <div class="media-container-row">
-
-                <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
-                    <ol>
-                        <li><strong>Before You Travel</strong> - Find out what to pack, which important documents you
-                            need to bring and what to expect at airport security. <a
-                                href="https://www.gohawaii.com/trip-planning/planning-your-trip/before-traveling">MORE
-                                ></a></li>
-                        <li><strong>Weather</strong> - The Hawaiian Islands are known for their beautiful weather year
-                            around, but conditions can differ at various elevations, so we want you to be prepared when
-                            you arrive. <a href="https://www.gohawaii.com/trip-planning/weather">MORE ></a></li>
-                        <li><strong>Safety Tips</strong> - Make sure the whole family stays safe and secure on your trip
-                            to Hawaii with these useful tips and tricks, from ocean safety to procedures in the event of
-                            an emergency. <a href="https://www.gohawaii.com/trip-planning/travel-smart/safety-tips">MORE
-                                ></a></li>
-                    </ol>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
     <section once="footers" class="cid-rT5EuCsQJo" id="footer7-f">
         <div class="container">
