--- a/HawaiiPage/index.html
+++ b/HawaiiPage/index.html
@@ -58,9 +58,9 @@
         <div class="box2 justify-content-md-center" data-aos="zoom-in-right">
             <div class="row ">
                 <div class="mbr-white col-md-10 ">
-                    <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">Hawaii is the island of
+                    <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-2">“ Hawaii is the island of
                         big dreams for both islanders and guests. Those dreams born in paradise can, indeed come
-                        true.&nbsp;</h3>
+                        true. ”&nbsp;</h3>
 
 
                 </div>
@@ -125,7 +125,7 @@
                 </div>
 
                 <div class="block-content align-left">
-                    <div class="card pl-3 pr-3 pb-5" data-aos="fade-up-left">
+                    <div class="card pl-3 pr-3 pb-5"  data-aos="fade-up-right">
                         <div class="mbr-card-img-title">
 
                             <div class="mbr-crt-title">
@@ -145,7 +145,7 @@
                         </div>
                     </div>
 
-                    <div class="card pl-3 pr-3" data-aos="fade-up-left">
+                    <div class="card pl-3 pr-3"  data-aos="fade-up-right">
                         <div class="mbr-card-img-title">
 
                             <div class="mbr-crt-title">
