--- a/DataGoRun/index.html
+++ b/DataGoRun/index.html
@@ -7,7 +7,7 @@
   <title>數據跑跑</title>
 
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/style.css" type="text/css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
 
 </head>
 
