--- a/DataGoRun/index.html
+++ b/DataGoRun/index.html
@@ -8,19 +8,50 @@
 
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css" type="text/css">
-
+  <link rel="stylesheet" href="./css/runner_button.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 </head>
 
 <body>
+
+  <!--------------- Navbar --------------------->
+  <nav class="nav-box">
+    <ul class="nav navbar">
+      <li class="nav-item active"><a href="#top">TOP</a></li>
+      <li class="nav-item"><a href="#islands">關於跑跑</a></li>
+      <li class="nav-item"><a href="#history">跑跑項目</a></li>
+      <li class="nav-item"><a href="#plan">我要跑跑</a></li>
+      <li class="nav-item"><a href="#explore">聯絡跑跑</a></li>
+    </ul>
+  </nav>
+
+
+  <!--------------- banner --------------------->
+
   <!------------ Starry Sky------------------------>
   <!-- <div class="stars"></div>
      <div class="twinkling"></div> -->
   <!------------ End - Starry Sky------------------>
-  <div class="wrapper">
+  <section class="wrapper">
+    <img class="banner-top" src="./img/banner_bottom.png" alt="">
+
     <!------------ Parallax Scene-------------------->
     <ul id="scene" class="scene">
-      <li class="layer" data-depth="0.00"></li>
-      <li class="layer" data-depth="0.30"><a href="#0">數據跑跑</a></li>
+      <li class="layer" data-depth="0.20">
+        <img class="logo-back" src="./img/banner_logo_back.png" alt="">
+        <div class="logo-box">
+          <img class="logo" src="./img/logo4.png" alt="">
+          <span>數據不僅是數字，它更是生活，更是血液；<br>貫穿人一生中每個生命階段。</span>
+
+        </div>
+
+      </li>
+      <li class="layer" data-depth="0.30">
+        <a href="#0">
+          <!-- <img src="./img/logo4.png" alt="">        -->
+        </a>
+      </li>
       <li class="layer" data-depth="0.60"><a href="#1" class="moveUp">0</a></li>
       <li class="layer" data-depth="0.90"><a href="#2" class="moveDown">1</a></li>
       <li class="layer" data-depth="0.70"><a href="#3" class="moveUp">2</a></li>
@@ -34,12 +65,81 @@
 
     </ul>
     <!------------ End - Parallax Scene------------->
-
-  </div>
-
+    <img class="banner-right" src="./img/banner_right.png" alt="">
 
 
 
+    <!-- runner button -->
+    <!-- <div class="running">
+      <div class="outer">
+        <div class="body">
+          <div class="arm behind"></div>
+          <div class="arm front"></div>
+          <div class="leg behind"></div>
+          <div class="leg front"></div>
+        </div>
+      </div>
+    </div> -->
+
+    <button class="running-button">
+      <span class="default">Let's run</span>
+      <span class="active">Tracking</span>
+      <div class="running">
+        <div class="outer">
+          <div class="body">
+            <div class="arm behind"></div>
+            <div class="arm front"></div>
+            <div class="leg behind"></div>
+            <div class="leg front"></div>
+          </div>
+        </div>
+      </div>
+    </button>
+
+    <!-- dribbble - twitter -->
+    <a class="dribbble" href="https://dribbble.com/shots/8928992-Running-man-button" target="_blank"><img
+        src="https://cdn.dribbble.com/assets/dribbble-ball-mark-2bd45f09c2fb58dbbfb44766d5d1d07c5a12972d602ef8b32204d28fa3dda554.svg"
+        alt=""></a>
+    <a class="twitter" target="_blank" href="https://twitter.com/aaroniker_me"><svg xmlns="http://www.w3.org/2000/svg"
+        width="72" height="72" viewBox="0 0 72 72">
+        <path
+          d="M67.812 16.141a26.246 26.246 0 0 1-7.519 2.06 13.134 13.134 0 0 0 5.756-7.244 26.127 26.127 0 0 1-8.313 3.176A13.075 13.075 0 0 0 48.182 10c-7.229 0-13.092 5.861-13.092 13.093 0 1.026.118 2.021.338 2.981-10.885-.548-20.528-5.757-26.987-13.679a13.048 13.048 0 0 0-1.771 6.581c0 4.542 2.312 8.551 5.824 10.898a13.048 13.048 0 0 1-5.93-1.638c-.002.055-.002.11-.002.162 0 6.345 4.513 11.638 10.504 12.84a13.177 13.177 0 0 1-3.449.457c-.846 0-1.667-.078-2.465-.231 1.667 5.2 6.499 8.986 12.23 9.09a26.276 26.276 0 0 1-16.26 5.606A26.21 26.21 0 0 1 4 55.976a37.036 37.036 0 0 0 20.067 5.882c24.083 0 37.251-19.949 37.251-37.249 0-.566-.014-1.134-.039-1.694a26.597 26.597 0 0 0 6.533-6.774z">
+        </path>
+      </svg></a>
+  </section>
+
+  <!--------------- 為何選跑跑 --------------------->
+  <section class="why-run container">    
+    <div class="row">
+      <div class="title">
+        <h2>為何選跑跑？</h2>
+        <span>你一定會喜歡跑跑</span>
+      </div>
+      <div class="col-12 col-md-4">
+        
+      </div>
+      <div class="col-12 col-md-4">
+
+      </div>
+    </div>
+    
+
+
+  </section>
+
+
+
+  <!-- JS -->
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+    integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
   <script>
@@ -541,7 +641,18 @@
     }());
     var scene = document.getElementById('scene');
     var parallax = new Parallax(scene);
+
+
+    document.querySelectorAll('.running-button').forEach(btn => {
+      btn.addEventListener('click', e => {
+        btn.classList.toggle('active');
+      });
+    });
+
   </script>
+
+
+
 </body>
 
 </html>
