--- a/jedy-2/temp.html
+++ b/jedy-2/temp.html
@@ -11,7 +11,7 @@
 
 
 
-    <!-- <div class="more-features-container section-container section-container-gray-bg">
+    <div class="more-features-container section-container section-container-gray-bg">
 		<div class="container">
 			<div class="row pull-right">
 				<div class="col-sm-12 more-features section-description text-center wow fadeIn">
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<!-- Great support -->
 	<div class="great-support-container section-container">
