--- a/jedy-2/index.html
+++ b/jedy-2/index.html
@@ -278,10 +278,10 @@
 	<!-- 跑跑內容 -->
 	<section class="features-container section-container run-content">
 		<div class="container">
-			<div class="row title-right">
-				<div class=" col-sm-12 more-features section-description wow fadeIn">
+			<div class="row ">
+				<div class="pull-right col-sm-12 more-features section-description wow fadeIn">
 					<h2><strong>跑跑</strong>內容</h2>
-					<span>讓跑跑滿足您所有願望</span>
+					<span>跑跑有法寶替您解決問題</span>
 					<div class="divider-1 wow fadeInUp"><span></span></div>
 				</div>
 			</div>
@@ -322,7 +322,7 @@
 									</g>
 								</svg>
 							</div>
-							多項式模型預測
+							資料探勘
 						</li>
 
 					</ul>
@@ -359,9 +359,7 @@
 
 						<h1>Pay for it</h1>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at viverra est, eu finibus
-							mauris. Quisque tempus vestibulum fringilla. Morbi tortor eros, sollicitudin eu arcu sit
-							amet, aliquet sagittis dolor. </p>
+						<p>例：描述統計、I檢定、變異數分析、各類相關、簡單迥歸、卡方分析 </p>
 					</div>
 					<div id="third">
 						<div class="icon big">
@@ -408,7 +406,72 @@
 	</section>
 
 
+<!-- 跑跑流程 -->
+	<section class="run-process">
+		<div class="more-features-container section-container section-container-gray-bg">
+		<div class="container">
+			<div class="row pull-right">
+				<div class="col-sm-12 more-features section-description text-center wow fadeIn">
+					<h2><strong>跑跑</strong>內容</h2>
+					<div class="divider-1 wow fadeInUp"><span></span></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-5 more-features-box wow fadeInLeft">
+					<img src="assets/img/devices/iphone.png" alt="">
+				</div>
+				<div class="col-sm-7 more-features-box wow fadeInUp">
 
+					<div class="more-features-box-text">
+						<div class="more-features-box-text-icon">
+							<i class="fa fa-paperclip"></i>
+						</div>
+						<h3>數據清洗</h3>
+						<div class="more-features-box-text-description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+							ut labore et.
+							Ut wisi enim ad minim veniam, quis nostrud.
+						</div>
+					</div>
+					<div class="more-features-box-text">
+						<div class="more-features-box-text-icon">
+							<i class="fa fa-user"></i>
+						</div>
+						<h3>統計諮詢</h3>
+						<div class="more-features-box-text-description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+							ut labore et.
+							Ut wisi enim ad minim veniam, quis nostrud.
+						</div>
+					</div>
+					<div class="more-features-box-text">
+						<div class="more-features-box-text-icon">
+							<i class="fa fa-pencil"></i>
+						</div>
+						<h3>教學</h3>
+						<div class="more-features-box-text-description">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+							ut labore et.
+							Ut wisi enim ad minim veniam, quis nostrud.
+						</div>
+					</div>
+					<div class="more-features-box-text">
+						<div class="more-features-box-text-icon">
+							<i class="fa fa-twitter"></i>
+						</div>
+						<h3>大數據分析</h3>
+						<div class="more-features-box-text-description">
+
+
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+	</section>
 
 
 
