--- a/jedy-2/index-v2.html
+++ b/jedy-2/index-v2.html
@@ -381,9 +381,11 @@
 
 	<!-- 跑跑流程 -->
 	<section class="run-process">
+		<img src="./img/section_process_back.png" alt="">
 		<div class="container">
+			
 			<div class="row">
-				<div class="col-sm-12 more-features section-description text-center wow fadeIn">
+				<div class="col-sm-12 more-features section-description text-left wow fadeIn">
 					<h2><strong>跑跑</strong>流程</h2>
 					<span>讓您隨心所欲可以跑跑</span>
 					<div class="divider-1 wow fadeInUp"><span></span></div>
@@ -431,7 +433,7 @@
 					</li>
 					<!-- Close list entry! Repeating the same but using inverted styles -->
 					<li class="timeline-inverted">
-						<div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+						<div class="timeline-badge warning"><i class="glyphicon glyphicon-user"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
 								<h4 class="timeline-title">專人服務</h4>
